fix shorter images getting clipped

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -112,6 +112,9 @@ ul
     text-align: center
 
   .speaker-image-wrapper
+    display: block !important
+    margin: 1rem auto
+    min-height: 250px
     text-align: center
 
     img
@@ -174,7 +177,7 @@ ul
     .speaker-image-wrapper
       display: inline-block
       float: left
-      margin-right: 1rem
+      margin: 1rem
       shape-margin: .5rem
       shape-outside: circle(50%)
       text-align: initial
